--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
           <h4>HAIR WASH</h4>
       </div>
   </div>
-    <figcaption class="figure-caption text-center fs-4 my-0">Enjoy Our Service Above</figcaption>
+    <figcaption class="figure-caption text-center fs-4 my-0">Enjoy Our Services Above</figcaption>
 </figure>
   </div>
   </div>
