--- a/index.html
+++ b/index.html
@@ -47,21 +47,21 @@
     </nav>
 
     <!--Banner-->
-    <div class="banner img-fluid">
+  <div class="banner img-fluid">
       <div class="text">
-              <h1 class="title Display my-0">
-                  FADE CUT <br> BARBERSHOP
-              </h1>
-              <p class="txt lead-5 my-4">
+            <h1 class="title Display my-0">
+                FADE CUT <br> BARBERSHOP
+            </h1>
+            <p class="txt lead-5 my-4 font-monospace">
                   Best Choice For Your Haircut. <br>
                   Finding a good barber is like finding a good lawyer, you have to go to the same people
-              </p>
-              <a href="" class="bt">Reservasi Kunjungan</a>
+            </p>
+          <a href="" class="bt font-monospace">Reservasi Kunjungan</a>
       </div>
   </div>
 
    <!--About-->
-   <div class="abt text-md-center" id="about">
+<div class="abt text-md-center" id="about">
     <h2 class="h3 my-5" style="font-family: inter;">TENTANG FCB</h2>
     <p class="lead fs-6 my-2" style="font-family: Montserrat;">
         Rambut memang menjadi daya tarik dan sebagai identitas dari karakter seseorang. <br> 
@@ -72,6 +72,7 @@
     </p>
     <img src="asset/Logo 2.png" class="lg border border-secondary rounded-circle my-5 img-fluid" style="max-width: 6%;">
 </div>
+
   <!--Service-->
 <div class="service">
   <div class="container">
@@ -88,29 +89,29 @@
         <div class="carousel-item active">
           <img src="asset/Banner.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>First slide label</h5>
-            <p>Some representative placeholder content for the first slide.</p>
+            <h5>Haircut</h5>
+            <p>Best Place For Your Haircut.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="asset/Banner.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Second slide label</h5>
-            <p>Some representative placeholder content for the second slide.</p>
+            <h5>Coloring</h5>
+            <p>Hair Coloring To Make You Colorfull.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="asset/Banner.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Third slide label</h5>
-            <p>Some representative placeholder content for the third slide.</p>
+            <h5>Styling</h5>
+            <p>Style Your Hair For Better Appareance.</p>
           </div>
         </div>
         <div class="carousel-item">
           <img src="asset/Banner.png" class="d-block w-100" alt="...">
           <div class="carousel-caption d-none d-md-block">
-            <h5>Fourth slide label</h5>
-            <p>Some representative placeholder content for the Fourth slide.</p>
+            <h5>Hair Wash</h5>
+            <p>Clean Your Hair And Head, Relaxation.</p>
           </div>
         </div>
       </div>
@@ -141,7 +142,7 @@
           <h4>HAIR WASH</h4>
       </div>
   </div>
-    <figcaption class="figure-caption text-center fs-4 my-0">Enjoy Our Services Above</figcaption>
+    <figcaption class="figure-caption text-center fs-4 my-0 font-monospace">Enjoy Our Services Above</figcaption>
 </figure>
   </div>
   </div>
@@ -151,18 +152,84 @@
 <section class="loc" id="location">
   <div class="container">
       <h3 class="text-md-center h3 p-5 my-3" style="font-family: inter;">LOKASI</h3>
-         <div class="map">
-            <center><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3927.2815833662366!2d123.6202825!3d-10.1577514!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2c569cb07c5c9f13%3A0xd499d54bad302f6f!2sOYO%202814%20Debitos%20Hotel!5e0!3m2!1sen!2sid!4v1664887088580!5m2!1sen!2sid" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></center>
+        <div class="map">
+          <center><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3927.2815833662366!2d123.6202825!3d-10.1577514!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2c569cb07c5c9f13%3A0xd499d54bad302f6f!2sOYO%202814%20Debitos%20Hotel!5e0!3m2!1sen!2sid!4v1664887088580!5m2!1sen!2sid" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></center>
         </div>
   </div>
 </section>
 
-<!-- footer -->
-<footer>
-  <div class="container">
-      <small>Made By Alexander J Aten & Reinhard L. D. Copyright &copy; 2022. All Rights Reserved To All The Property Owner.</small>
+<!-- Footer -->
+<footer class="text-center text-lg-start bg-dark text-white">
+  <!-- Section: Social media -->
+  <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom">
+    <!-- Left -->
+    <div class="me-5 d-none d-lg-block font-monospace">
+      <span>Get connected with us on social networks:</span>
+    </div>
+    <!-- Left -->
+
+    <!-- Right -->
+    <div>
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-facebook-f"></i>
+      </a>
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-twitter"></i>
+      </a>
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-instagram"></i>
+      </a>
+      <a href="" class="me-4 link-secondary">
+        <i class="fab fa-github"></i>
+      </a>
+    </div>
+    <!-- Right -->
+  </section>
+  <!-- Section: Social media -->
+
+  <!-- Section: Links  -->
+  <section class="">
+    <div class="container text-center text-md-start mt-5">
+      <!-- Grid row -->
+      <div class="row mt-3">
+        <!-- Grid column -->
+        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+          <!-- Content -->
+          <h6 class="text-uppercase fw-bold mb-4">
+            <i class="fas fa-scissors me-3 text-secondary"></i>FC BarberShop
+          </h6>
+          <p class="font-monospace">
+            Visit Our Barber And Store.
+          </p>
+        </div>
+        <!-- Grid column -->
+
+        <!-- Grid column -->
+        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+          <!-- Links -->
+          <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+          <p><i class="fas fa-home me-3 text-secondary"></i> Alamat: Jl. Alamat toko barbershop kamu, kecamatan, kabupaten/kota, provinsi, kode pos.</p>
+          <p>
+            <i class="fas fa-envelope me-3 text-secondary"></i>
+            Contact@FCBarber.com
+          </p>
+          <p><i class="fas fa-phone me-3 text-secondary"></i> + 62 234 567 88</p>
+          <p><i class="fas fa-print me-3 text-secondary"></i> + 62 234 567 89</p>
+        </div>
+        <!-- Grid column -->
+      </div>
+      <!-- Grid row -->
+    </div>
+  </section>
+  <!-- Section: Links  -->
+
+  <!-- Copyright -->
+  <div class="text-center p-4 bg-black.bg-gradient font-monospace" style="background-color: rgba(0, 0, 0, 0.2);">
+    <small>Made By Alexander J Aten & Reinhard L. D. Copyright &copy; 2022. All Rights Reserved To All The Property Owner.</small>
   </div>
+  <!-- Copyright -->
 </footer>
+<!-- Footer -->
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
