--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="social">
       <div class="container">
           <a href="https://github.com/Shinki7"><i class="fa-brands fa-github"></i></a>
-          <a href="https://github.com/Shinki7/wf"><i class="fa-solid fa-code-branch"></i></a>
+          <a href="https://github.com/Shinki7/Web"><i class="fa-solid fa-code-branch"></i></a>
       </div>
   </div>
 
