Logo On Tab Title

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="css/bootstrap.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-
+    <link rel="shortcut icon" href="asset/Logo.png">
     <title>FC Barbershop</title>
   </head>
   <body>
@@ -211,7 +211,7 @@
           <p><i class="fas fa-home me-3 text-secondary"></i> Alamat: Jl. Alamat toko barbershop kamu, kecamatan, kabupaten/kota, provinsi, kode pos.</p>
           <p>
             <i class="fas fa-envelope me-3 text-secondary"></i>
-            Contact@FCBarber.com
+            Contact@fcbarber.com
           </p>
           <p><i class="fas fa-phone me-3 text-secondary"></i> + 62 234 567 88</p>
           <p><i class="fas fa-print me-3 text-secondary"></i> + 62 234 567 89</p>
