--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   Best Choice For Your Haircut. <br>
                   Finding a good barber is like finding a good lawyer, you have to go to the same people
             </p>
-          <a href="" class="bt font-monospace">Reservasi Kunjungan</a>
+          <a href="" class="bt rounded font-monospace">Reservasi Kunjungan</a>
       </div>
   </div>
 
@@ -67,7 +67,7 @@
         Rambut memang menjadi daya tarik dan sebagai identitas dari karakter seseorang. <br> 
         Konsultasikan gaya rambutmu sekarang juga, <br> 
         langsung saja ke Fade Cut BarberShop. <br></br>
-        Kami akan memberikan saran stayle rambut terbaik yang cocok untukmu dan yang kekinian banget, <br> 
+        Kami akan memberikan saran style rambut terbaik yang cocok untukmu dan yang kekinian banget, <br> 
         dengan pelayanan terbaik dan juga kualitas hasil yang memuaskan. <br></br>
     </p>
     <img src="asset/Logo 2.png" class="lg border border-secondary rounded-circle my-5 img-fluid" style="max-width: 6%;">
@@ -151,10 +151,63 @@
  <!--Location-->
 <section class="loc" id="location">
   <div class="container">
-      <h3 class="text-md-center h3 p-5 my-3" style="font-family: inter;">LOKASI</h3>
-        <div class="map">
-          <center><iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3927.2815833662366!2d123.6202825!3d-10.1577514!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2c569cb07c5c9f13%3A0xd499d54bad302f6f!2sOYO%202814%20Debitos%20Hotel!5e0!3m2!1sen!2sid!4v1664887088580!5m2!1sen!2sid" width="800" height="600" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></center>
+      <h3 class="text-md-center h3 p-3 my-2" style="font-family: inter;">LOKASI</h3>
+      <section class="mx-auto my-1" style="max-width: 23rem;">
+      
+        <div class="card map-card">
+          <div id="map-container-google-1" class="z-depth-1-half map-container shadow-lg" style="height: 500px">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3927.2815833662366!2d123.6202825!3d-10.1577514!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2c569cb07c5c9f13%3A0xd499d54bad302f6f!2sOYO%202814%20Debitos%20Hotel!5e0!3m2!1sen!2sid!4v1664887088580!5m2!1sen!2sid" frameborder="0"
+              style="border:0" class="rounded" allowfullscreen></iframe>
+          </div>
+          <div class="card-body closed px-0">
+            <div class="bg-light px-4 pb-4 pt-3-5">
+              <h5 class="card-title h5 living-coral-text">Fade Cut Barbershop</h5>
+              <div class="d-flex justify-content-between living-coral-text">
+                <h6 class="card-subtitle font-weight-light font-monospace">Best Choice For Your Haircut</h6>
+                <h6 class="font-small font-weight-light mt-n1 font-monospace">60 min</h6>
+              </div>
+              <hr>
+              <div class="d-flex justify-content-between pt-2 mt-1 text-center text-uppercase living-coral-text">
+                <div>
+                  <i class="fas fa-phone fa-lg mb-3"></i>
+                  <p class="mb-0">Call</p>
+                </div>
+                <div>
+                  <i class="fas fa-scissors fa-lg mb-3"></i>
+                  <p class="mb-0">Cut</p>
+                </div>
+                <div>
+                  <i class="far fa-grin-beam-sweat fa-lg mb-3"></i>
+                  <p class="mb-0">Smile</p>
+                </div>
+              </div>
+              <hr>
+              <table class="table table-borderless">
+                <tbody>
+                  <tr>
+                    <th scope="row" class="px-0 pb-3 pt-2">
+                      <i class="fas fa-map-marker-alt living-coral-text"></i>
+                    </th>
+                    <td class="pb-3 pt-2">Jl. Alamat, kecamatan, Kota, Provinsi, 85111.</td>
+                  </tr>
+                  <tr class="mt-2">
+                    <th scope="row" class="px-0 pb-3 pt-2">
+                      <i class="far fa-clock living-coral-text"></i>
+                    </th>
+                    <td class="pb-3 pt-2"><span class="deep-purple-text me-2"> Closed</span> Opens 10 AM</td>
+                  </tr>
+                  <tr class="mt-2">
+                    <th scope="row" class="px-0 pb-3 pt-2">
+                      <i class="fas fa-cloud-moon living-coral-text"></i>
+                    </th>
+                    <td class="pb-3 pt-2">Sunny weather tomorrow</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
         </div>
+      </section>
   </div>
 </section>
 
@@ -208,7 +261,7 @@
         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
           <!-- Links -->
           <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-          <p><i class="fas fa-home me-3 text-secondary"></i> Alamat: Jl. Alamat toko barbershop kamu, kecamatan, kabupaten/kota, provinsi, kode pos.</p>
+          <p><i class="fas fa-home me-3 text-secondary"></i> Alamat: Jl. Alamat, kecamatan, kabupaten/kota, provinsi, 85111.</p>
           <p>
             <i class="fas fa-envelope me-3 text-secondary"></i>
             Contact@fcbarber.com
@@ -235,6 +288,7 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="js/bootstrap.js"></script>
     <script src="js/popper.min.js"></script>
+    <script src="js/script.js"></script>
 
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
