--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                   Best Choice For Your Haircut. <br>
                   Finding a good barber is like finding a good lawyer, you have to go to the same people
             </p>
-          <a href="" class="bt rounded font-monospace">Reservasi Kunjungan</a>
+          <a href="" class="bt rounded" style="font-family: montserrat;">Reservasi</a>
       </div>
   </div>
 
