--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
   </div>
 
    <!--About-->
-<div class="abt text-md-center" id="about">
+<div class="abt text-md-center text-lg-center text-sm-center" id="about">
     <h2 class="h3 my-5" style="font-family: inter;">TENTANG FCB</h2>
     <p class="lead fs-6 my-2" style="font-family: Montserrat;">
         Rambut memang menjadi daya tarik dan sebagai identitas dari karakter seseorang. <br> 
