--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d3927.2815833662366!2d123.6202825!3d-10.1577514!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2c569cb07c5c9f13%3A0xd499d54bad302f6f!2sOYO%202814%20Debitos%20Hotel!5e0!3m2!1sen!2sid!4v1664887088580!5m2!1sen!2sid" frameborder="0"
               style="border:0" class="rounded" allowfullscreen></iframe>
           </div>
-          <div class="card-body closed px-0">
+          <div class="card-body closed px-0 rounded">
             <div class="bg-light px-4 pb-4 pt-3-5">
               <h5 class="card-title h5 living-coral-text">Fade Cut Barbershop</h5>
               <div class="d-flex justify-content-between living-coral-text">
@@ -188,7 +188,7 @@
                     <th scope="row" class="px-0 pb-3 pt-2">
                       <i class="fas fa-map-marker-alt living-coral-text"></i>
                     </th>
-                    <td class="pb-3 pt-2">Jl. Alamat, kecamatan, Kota, Provinsi, 85111.</td>
+                    <td class="pb-3 pt-2">Jl. Alamat, Kecamatan, Kota, Provinsi, 85111.</td>
                   </tr>
                   <tr class="mt-2">
                     <th scope="row" class="px-0 pb-3 pt-2">
@@ -232,7 +232,7 @@
       <a href="" class="me-4 link-secondary">
         <i class="fab fa-instagram"></i>
       </a>
-      <a href="" class="me-4 link-secondary">
+      <a href="https://github.com/Shinki7" class="me-4 link-secondary">
         <i class="fab fa-github"></i>
       </a>
     </div>
